backups/cloudformation-forensics/20250906_035052/resources/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-055d6b3293eab4174",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-052d23b49de47f255",
            "SecurityGroupArn": "arn:aws:ec2:eu-north-1:690248313240:security-group/sg-055d6b3293eab4174",
            "OwnerId": "690248313240",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "690248313240",
                            "GroupId": "sg-055d6b3293eab4174"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
